doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-7-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/extensions/greenfoot.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/bluejcore.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/bluejeditor.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/bluejext.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/AppleJavaExtensions.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/junit-4.8.2.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/bluej.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/commons-httpclient-3.1.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/commons-logging-api-1.1.2.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/commons-codec-1.3.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/jl1.0.1.jar:/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/opencsv-2.3.jar:/media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG
-d
/media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/media/truecrypt1/lukas/software/bySystems/java/greenfoot/lib/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG/Tiles.java
<---- end of javadoc command ---->
Loading source file /media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG/Tiles.java...
/media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG/Tiles.java:22: error: ';' expected
        tileImageInvisible.scale(dungeon.tileWidth, dungeon.tileHeight)
                                                                       ^
/media/truecrypt1/lukas/software/eigene/schule/cleanAntiRPG/Tiles.java:23: error: ';' expected
        tileImageVisible.scale(dungeon.tileWidth, dungeon.tileHeight)
                                                                     ^
2 errors
